fix: popup pos and title overflow

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,5 @@
 .header {
   padding: 28px 0 32px;
   border-bottom: 1px solid #545454;
+  opacity: 0.7;
 }
