--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -7,16 +7,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: fixed;
-  left: 50%;
-  top: 34%;
-  transform: translate(-50%, -51%);
+  position: relative;
+  top: -138px;
+  left: 0;
 }
 
 @media screen and (min-width: 880px) {
   .popup__container {
     width: 430px;
     min-height: 330px;
-    top: 43%;
+    top: -62px;
   }
 }
