--- a/blocks/popup/__subtitle/popup__subtitle.css
+++ b/blocks/popup/__subtitle/popup__subtitle.css
@@ -8,7 +8,7 @@
   line-height: 17px;
   color: #000;
   border: 0;
-  border-bottom: 1px solid rgba(0, 0, 0, .3);
+  border-bottom: 1px solid rgba(0, 0, 0, .2);
 }
 
 @media screen and (min-width: 880px) {
