--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,4 +1,6 @@
 .popup_opened {
-  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
 }
