--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,3 +1,10 @@
 .popup {
+  width: 100%;
+  height: 100%;
+  font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+
 }
